# project-archer

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml  keep-alive.yml
backend/: .dockerignore  .env.example  Dockerfile  eval_routing.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_oauth.py  003_expand_catalog.py  004_phase2a_columns.py  005_embedding_routing.py  006_admin_and_routing_config.py
backend/app/: config.py  main.py
backend/app/api/middleware/: auth.py
backend/app/api/routes/: admin.py  api_keys.py  auth.py  chat.py  dashboard.py  health.py  logs.py  models.py
backend/app/core/: centroids.json  embeddings.py  normalizer.py  proxy.py  rate_limit.py  router.py  routing_exemplars.py  security.py
backend/app/db/: database.py  models.py
backend/app/db/repositories/: api_keys.py  models.py  oauth_accounts.py  requests.py  users.py
backend/app/providers/: __init__.py  base.py  groq.py  ollama.py  openrouter.py
backend/app/schemas/: admin.py  api_keys.py  auth.py  chat.py  common.py  logs.py  models.py
backend/tests/: conftest.py  test_admin.py  test_catalog_sync.py  test_dashboard_aggregates.py  test_embeddings.py  test_normalizer.py  test_proxy.py  test_rate_limit.py  test_router.py  test_routing_config.py
frontend/: .env.example  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  auth.ts  pricing.ts
frontend/types/: index.ts  next-auth.d.ts
nginx/: nginx.conf  nginx.local.conf
(+39 files in other folders)
